--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -2,53 +2,23 @@
   background: #fff;
   border-radius: 2px;
   /* height: 325px; */
-  margin: 1rem;
+  margin: 1rem 0;
   /* position: relative; */
   /* width: 325px; */
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  box-shadow: 0 3px 6px black, 0 3px 6px black;
   text-align: left;
-  padding: 2rem;
+  padding: .5rem;
 }
 
-/* .card > .img-container {
-  height: 60%;
-  overflow: hidden;
+img {
+  height: 75%;
+  width: 75%;
+}
+
+content > .row:first-child{
   text-align: center;
-  background:#6CADDC;
-}
-.card > .img-container > img {
-  width: 60%
-} */
-
-.card > .content {
-  /* padding-left: 1rem;
-  padding-right: 1rem; */
-  /* font-size: 15px; */
 }
 
-.card > .content > ul {
-  list-style-type: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
+.row {
+  align-items: center;
 }
-
-.card > .content > ul > li {
-  /* margin-top: 18px; */
-  margin: 1rem;
-  word-wrap: normal;
-  
-}
-
-/* .card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
-} */
